[package]
name = "minrusty"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"

[dependencies]
specs = "0.15"
vek = "0.9"

[dependencies.glow]
version = "0.4"
default-features = false

[features]
# default = ["web-sys"]
web-sys = ["web_sys", "wasm-bindgen", "glow/web-sys"]
# stdweb = ["std_web", "webgl_stdweb", "glow/stdweb"]
window-sdl2 = ["sdl2", "glow/sdl2"]

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
sdl2 = { version = "0.32", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features=["console"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
# std_web  = { version = "0.4.18", package = "stdweb", optional = true }
# webgl_stdweb = { version = "0.3", optional = true }