[package]
name = "minrusty"
version = "0.1.0"
authors = ["Simon <simonwoodburyforget@gmail.com>"]
edition = "2018"
license = "GNUv3"
repository = "https://github.com/SimonWoodburyForget/minrusty/"
description = '''
An experimental game development side project.
'''

[lib]
crate-type = ["cdylib", "rlib"]

[features]
web = ["glow/web-sys", "winit/web-sys", "web-sys", "wasm-bindgen"]
nat = ["glow/glutin", "glutin"]

################################################################
# Native and Web Dependencies
[dependencies]
specs = { version = "0.15", features = ["specs-derive"] }
specs-derive = "0.4.0"
vek = "0.9"

[dependencies.glow]
version = "0.4"
default-features = false

[dependencies.winit]
version = "0.20"

################################################################
# Web Dependencies
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true

################################################################
# Native Dependencies
[dependencies.glutin]
version = "0.22"
optional = true